Заменяет height на min-height

--- a/source/sass/blocks/body-cell.scss
+++ b/source/sass/blocks/body-cell.scss
@@ -1,8 +1,8 @@
 .body-cell {
   vertical-align: middle;
   text-transform: uppercase;
-  padding: 0;
-  padding-left: 20px;
+  background-color: #ffffff;
+  border: 2px #e5e5e5 solid;
   line-height: 30px;
 }
 
