--- a/source/sass/blocks/button.scss
+++ b/source/sass/blocks/button.scss
@@ -1,6 +1,6 @@
 .button {
   box-sizing: border-box;
-  height: 55px;
+  min-height: 55px;
   border-width: 3px;
   border-radius: 29px;
   border-style: solid;
