--- a/source/sass/blocks/story.scss
+++ b/source/sass/blocks/story.scss
@@ -6,7 +6,7 @@
 .story__input {
   padding-top: 14px;
   display: block;
-  height: 197px - 14px;
+  min-height: 197px - 14px;
   resize: none;
   font-family: "Open Sans", sans-serif;
   font-size: 18px;
@@ -30,12 +30,12 @@
 
 @media (min-width: $tablet-width) {
   .story__input {
-    height: 189px - 14px;
+    min-height: 189px - 14px;
   }
 }
 
 @media (min-width: $desktop-width) {
   .story__input {
-    height: 124px - 14px;
+    min-height: 124px - 14px;
   }
 }
