--- a/source/sass/blocks/table.scss
+++ b/source/sass/blocks/table.scss
@@ -11,12 +11,9 @@
 }
 
 .table__head-cell {
-  background-color: $darkgrey;
-  color: #ffffff;
-  border-right: 2px #f2f2f2 solid;
-  box-sizing: border-box;
-  width: 278px;
-  height: 94px;
+  max-width: 278px;
+  height: 98px;
+  padding: 12px 95px 28px 95px;
 
   &:last-child {
     border-right: none;
@@ -25,11 +22,11 @@
 
 .table__body-cell {
   position: relative;
-  background-color: #ffffff;
-  border: 2px #e5e5e5 solid;
   box-sizing: border-box;
   border-top: none;
   height: 59px;
+  padding: 0;
+  padding-left: 20px;
 }
 
 @media (min-width: $tablet-width) {
