--- a/source/sass/blocks/form-photo.scss
+++ b/source/sass/blocks/form-photo.scss
@@ -6,7 +6,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 122px;
+  min-height: 122px;
 }
 
 .form-photo__button {
@@ -33,7 +33,7 @@
   .form-photo__button-wrapper {
     padding-left: 2px;
     padding-right: 13px;
-    height: 3404px - 3270px;
+    min-height: 3404px - 3270px;
   }
 }
 
@@ -46,7 +46,7 @@
     flex-direction: row;
     padding: 0;
     width: 100%;
-    height: auto;
+    min-height: 55px;
   }
 
   .form-photo__button {
