Раскомментирует фоновые изображения

--- a/source/sass/blocks/benefits.scss
+++ b/source/sass/blocks/benefits.scss
@@ -1,6 +1,6 @@
 .benefits {
   color: $darkgrey;
-  //background-image: url("../img/index/benefits-screen-smile.png"), url("../img/index/benefits-phone.png"), url("../img/index/benefits-background.svg");
+  background-image: url("../img/index/benefits-screen-smile.png"), url("../img/index/benefits-phone.png"), url("../img/index/benefits-background.svg");
   background-repeat: no-repeat;
   background-position: center 762px, center 725px, center bottom;
   padding-left: 20px;
