--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -4,15 +4,15 @@
   background-color: #1d2631;
   color: #ffffff;
 
-  //background-image: url("../img/header/background-mobile.jpg");
-  //background-repeat: no-repeat;
-  //background-position: top;
+  background-image: url("../img/header/background-mobile.jpg");
+  background-repeat: no-repeat;
+  background-position: top;
 
-  //&--index {
-  //background-image: url("../img/header/phone-hand.png"), url("../img/header/phone-screen.jpg"), url("../img/header/background-mobile.jpg");
-  //background-repeat: no-repeat;
-  //background-position: left 176px, center 209px, top;
-  //}
+  &--index {
+    background-image: url("../img/header/phone-hand.png"), url("../img/header/phone-screen.jpg"), url("../img/header/background-mobile.jpg");
+    background-repeat: no-repeat;
+    background-position: left 176px, center 209px, top;
+  }
 }
 
 .page-header__nav-wrapper {
