--- a/source/sass/blocks/rates.scss
+++ b/source/sass/blocks/rates.scss
@@ -1,6 +1,6 @@
 .rates {
-  //background-image: url("../img/index/rates-background.svg");
-  //background-repeat: no-repeat;
+  background-image: url("../img/index/rates-background.svg");
+  background-repeat: no-repeat;
   min-height: 480px;
   overflow: hidden;
   background-color: $lightgrey;
