--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -3,10 +3,9 @@
 @import "./visually-hidden";
 @import "./blocks/page.scss";
 @import "./blocks/page-header.scss";
-@import "./blocks/nav-wrapper.scss";
-@import "./blocks/logo-link.scss";
-@import "./blocks/apps.scss";
+@import "./blocks/main-nav.scss";
 @import "./blocks/site-list.scss";
+@import "./blocks/apps.scss";
 @import "./blocks/benefits.scss";
 @import "./blocks/benefits-intro.scss";
 @import "./blocks/effectiveness.scss";
