--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -5,6 +5,7 @@
 @import "./blocks/page-header.scss";
 @import "./blocks/main-nav.scss";
 @import "./blocks/site-list.scss";
+@import "./blocks/nav-list.scss";
 @import "./blocks/apps.scss";
 @import "./blocks/benefits.scss";
 @import "./blocks/benefits-intro.scss";
