--- a/source/sass/variable.scss
+++ b/source/sass/variable.scss
@@ -1,5 +1,7 @@
 $tablet-width: 660px;
 $desktop-width: 1200px;
+$mobile-width-only: 659px;
+$tablet-width-only: 1199px;
 
 $darkgrey: #283645;
 $lightgrey: #f2f2f2;
