--- a/source/sass/blocks/modal.scss
+++ b/source/sass/blocks/modal.scss
@@ -1,6 +1,17 @@
 .modal {
+  display: none;
+
+  position: absolute;
   background-color: inherit;
   box-shadow: 0 7px 15px rgba(0, 1, 1, 0.15);
+
+  &--fault {
+    top: 1166px;
+  }
+
+  &--accept {
+    top: 1640px;
+  }
 }
 
 .modal__content-wrapper {
@@ -42,10 +53,18 @@
 @media (min-width: $tablet-width) {
   .modal {
     width: 460px;
-    display: flex;
+    //display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 auto;
+    left: 100px;
+
+    &--fault {
+      top: 909px;
+    }
+
+    &--accept {
+      top: 1383px;
+    }
   }
 
   .modal__content-wrapper {
@@ -82,6 +101,15 @@
 @media (min-width: $desktop-width) {
   .modal {
     width: 780px;
+    left: 210px;
+
+    &--fault {
+      top: 817px;
+    }
+
+    &--accept {
+      top: 1275px;
+    }
   }
 
   .modal__content-wrapper {
