--- a/source/sass/blocks/nav-list.scss
+++ b/source/sass/blocks/nav-list.scss
@@ -1,6 +1,7 @@
 @media (min-width: $desktop-width) {
   .nav-list {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
   }
@@ -11,6 +12,7 @@
     text-transform: capitalize;
     text-decoration: none;
     color: #ffffff;
+    padding-right: 10px;
 
     &:hover {
       color: $pink;
