Добавляет кастомные чекбоксы и радиокнопки

--- a/source/sass/style.scss
+++ b/source/sass/style.scss
@@ -22,10 +22,13 @@
 @import "./blocks/form.scss";
 @import "./blocks/contestant.scss";
 @import "./blocks/form-label.scss";
+@import "./blocks/achievements.scss";
 @import "./blocks/form-legend.scss";
 @import "./blocks/user-contacts.scss";
 @import "./blocks/form-input.scss";
 @import "./blocks/check-label.scss";
+@import "./blocks/platform.scss";
+@import "./blocks/control.scss";
 @import "./blocks/story";
 @import "./blocks/form-button.scss";
 @import "./blocks/submit-button.scss";
