--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -48,7 +48,20 @@
 }
 
 .contacts__map-wrapper {
+  position: relative;
   height: 200px;
+
+  &::before {
+    background-color: #ffffff;
+    content: "";
+    width: 100%;
+    height: 33px;
+    position: absolute;
+    z-index: 1;
+    top: -1px;
+    left: 0;
+    clip-path: polygon(100% 0, 50% 100%, 0 0);
+  }
 }
 
 .contacts__map {
@@ -73,6 +86,10 @@
 
   .contacts__map-wrapper {
     height: 374px;
+
+    &::before {
+      height: 68px;
+    }
   }
 
   .contacts__map {
@@ -110,6 +127,10 @@
 
   .contacts__map-wrapper {
     height: 4021px - 3518px;
+
+    &::before {
+      height: 3622px - 3518px;
+    }
   }
 
   .contacts__map {
