--- a/source/sass/blocks/effectiveness.scss
+++ b/source/sass/blocks/effectiveness.scss
@@ -13,7 +13,7 @@
     padding-left: 330px - 20px;
     padding-top: 102px;
     padding-bottom: 29px - 5px;
-    background-image: url("../../img/index/timer.svg");
+    background-image: url("../img/index/timer.svg");
     background-repeat: no-repeat;
     background-position: 0 54px;
   }
