--- a/source/sass/blocks/apps.scss
+++ b/source/sass/blocks/apps.scss
@@ -24,7 +24,7 @@
 .apps__list {
   display: flex;
   justify-content: space-between;
-  align-items: baseline;
+  align-items: center;
   margin: 0;
   padding: 0;
   padding-left: 18px;
@@ -41,6 +41,7 @@
   .apps__content {
     padding: 0;
     align-items: center;
+    min-height: 616px - 378px;
   }
 
   .apps__button {
@@ -51,13 +52,11 @@
   }
 
   .apps__list {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
     width: 204px;
-    margin: 0;
     padding: 0;
+    padding-top: 15px;
   }
+
 
   .apps__description {
     font-size: 18px;
@@ -65,13 +64,12 @@
 }
 
 @media (min-width: $desktop-width) {
+  .apps__content {
+    min-height: 729px - 449px;
+  }
+
   .apps__list {
-    display: flex;
-    justify-content: space-between;
-    align-items: baseline;
-    width: 204px;
-    margin: 0;
-    padding: 0;
+    padding-top: 25px;
   }
 
   .apps__description {
