--- a/source/sass/blocks/benefits-intro.scss
+++ b/source/sass/blocks/benefits-intro.scss
@@ -31,7 +31,7 @@
 @media (min-width: $desktop-width) {
   .benefits-intro {
     padding-top: 77px - 24px;
-    padding-bottom: 42px - 2px;
+    padding-bottom: 50px;
     min-height: 315px - 77px - 24px;
   }
 
