--- a/source/sass/blocks/benefits.scss
+++ b/source/sass/blocks/benefits.scss
@@ -1,25 +1,40 @@
-.benefits {
-  color: $darkgrey;
-  background-image: url("../img/index/benefits-screen-smile.png"), url("../img/index/benefits-phone.png"), url("../img/index/benefits-background.svg");
-  background-repeat: no-repeat;
-  background-position: center 762px, center 725px, center bottom;
-  padding-left: 20px;
-  padding-right: 20px;
-}
-
 .benefits__wrapper {
   display: flex;
   min-height: 1735px - 949px - 85px;
-  padding-top: 85px;
+  position: relative;
+  background-color: $lightgrey;
+
+  &::before {
+    content: "";
+    height: 32px;
+    width: 100%;
+    position: absolute;
+    top: -1px;
+    left: 0;
+    background-color: #ffffff;
+    clip-path: polygon(100% 0, 0 0, 0 100%);
+    -webkit-clip-path: polygon(100% 0, 0 0, 0 100%);
+  }
+}
+
+.benefits__background-wrapper {
+  background-image: url("../img/index/benefits-screen-mobile.png"), url("../img/index/benefits-phone-mobile.png");
+  background-repeat: no-repeat;
+  background-position: center 545px, center 508px;
+  width: 100%;
 }
 
 .benefits__list {
-  margin: 0;
-  padding: 0;
+  padding-top: 81px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-bottom: 318px;
 }
 
 .benefits__item {
-  padding-bottom: 30px;
+  &:not(:last-child) {
+    padding-bottom: 30px;
+  }
 }
 
 .benefits__title {
@@ -37,19 +52,31 @@
 }
 
 @media (min-width: $tablet-width) {
-  .benefits {
-    background-image: none;
-    background-color: $lightgrey;
-  }
-
   .benefits__wrapper {
     min-height: 1454px - 967px - 99px;
-    padding-top: 99px;
-    padding-left: 330px - 20px;
+
+    &::before {
+      height: 1020px - 967px;
+    }
+  }
+
+  .benefits__background-wrapper {
+    z-index: 1;
+    background-image: url("../img/index/benefits-screen-tablet.png"), url("../img/index/benefits-phone-tablet.png");
+    background-repeat: no-repeat;
+    background-position: 35px 67px, 20px 6px;
+  }
+
+  .benefits__list {
+    padding-top: 1043px - 967px;
+    padding-left: 330px;
+    padding-bottom: 42px;
   }
 
   .benefits__item {
-    padding-bottom: 33px;
+    &:not(:last-child) {
+      padding-bottom: 33px;
+    }
   }
 
   .benefits__title {
@@ -62,28 +89,37 @@
 }
 
 @media (min-width: $desktop-width) {
-  .benefits {
-    padding-left: 130px;
-    padding-right: 130px;
-    padding-bottom: 50px;
+  .benefits__wrapper {
+    &::before {
+      height: 100px;
+    }
   }
 
-  .benefits__wrapper {
-    min-height: 1732px - 1536px;
-    padding-top: 99px;
-    padding-left: 0;
+  .benefits__background-wrapper {
+    display: flex;
+    align-items: flex-end;
+    min-height: 616px - 307px;
+    padding-top: 307px;
+    background-image: url("../img/index/benefits-greymobile-desktop.png"), url("../img/index/benefits-pinkmobile-desktop.png"), url("../img/index/benefits-smilemobile-desktop.png");
+    background-repeat: no-repeat;
+    background-position: 130px 6px, 450px 6px, 770px 6px;
   }
 
   .benefits__list {
     display: flex;
     width: 100%;
     justify-content: space-between;
+    padding-top: 51px;
+    padding-left: 130px;
+    padding-right: 130px;
+    padding-bottom: 51px;
+    background-color: $lightgrey;
   }
 
   .benefits__item {
-    width: 252px - 10px;
-    padding-left: 5px;
-    padding-right: 5px;
+    width: 242px;
+    padding-left: 29px;
+    padding-right: 29px;
     padding-bottom: 0;
   }
 
