--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -61,6 +61,7 @@
     top: -1px;
     left: 0;
     clip-path: polygon(100% 0, 50% 100%, 0 0);
+    -webkit-clip-path: polygon(100% 0, 50% 100%, 0 0);
   }
 }
 
