--- a/source/sass/blocks/page-header.scss
+++ b/source/sass/blocks/page-header.scss
@@ -7,12 +7,14 @@
 
   background-image: url("../img/header/background-mobile.jpg");
   background-repeat: no-repeat;
-  background-position: bottom;
+  background-position: top;
+  background-size: cover;
 
   &--index {
-    background-image: url("../img/header/phone-hand.png"), url("../img/header/phone-screen.jpg"), url("../img/header/background-mobile.jpg");
+    background-image: url("../img/header/phone-mobile.png"), url("../img/header/background-mobile.jpg");
     background-repeat: no-repeat;
-    background-position: left 176px, center 209px, top;
+    background-position: left 176px, top;
+    background-size: auto auto;
   }
 }
 
@@ -47,19 +49,27 @@
 
 @media (min-width: $tablet-width) {
   .page-header {
-    background-image: none;
+    background-image: url("../img/header/background-tablet.jpg");
+    background-position: top;
+    background-size: auto;
+
+    &--index {
+      background-image: url("../img/header/phone-tablet.png"), url("../img/header/background-tablet.jpg");
+      background-position: bottom, top;
+      background-size: auto, cover;
+    }
   }
 
   .page-header__title-wrapper {
-    padding-top: 81px - 24px;
-    min-height: 440px - 110px - 81px;
+    padding-top: 65px;
 
     &--index {
       width: 300px - 50px - 50px;
       padding-top: 102px - 10px;
       padding-right: 50px;
-      padding-bottom: 39px - 10px;
+      padding-bottom: 27px;
       padding-left: 50px + 20px;
+      min-height: 150px;
     }
   }
 
@@ -76,13 +86,24 @@
   .page-header__apps {
     padding: 0;
     padding-left: 20px;
-    padding-bottom: 116px;
+    padding-bottom: 113px;
     width: 300px;
-    min-height: 351px - 116px;
   }
 }
 
 @media (min-width: $desktop-width) {
+  .page-header {
+    background-image: url("../img/header/background-desktop.jpg");
+    background-position: top;
+    background-size: auto;
+
+    &--index {
+      background-image: url("../img/header/phone-desktop.png"), url("../img/header/background-desktop.jpg");
+      background-position: 150px bottom, top;
+      background-size: auto, auto;
+    }
+  }
+
   .page-header__nav-wrapper {
     background-color: rgba(0, 0, 0, 0.3);
     padding-right: 130px;
@@ -93,21 +114,17 @@
     padding-top: 74px - 24px;
     padding-right: 130px;
     padding-left: 130px;
-    min-height: 394px - 110px - 50px;
 
     &--index {
       width: 300px;
-      padding-top: 114px - 10px;
+      padding-top: 98px;
       padding-right: 0;
-      padding-bottom: 51px - 10px;
+      padding-bottom: 36px;
       padding-left: 130px;
     }
   }
 
   .page-header__title {
-    font-size: 50px;
-    line-height: 68px;
-
     &--index {
       font-size: 50px;
       line-height: 68px;
@@ -118,6 +135,5 @@
     padding: 0;
     padding-left: 130px;
     padding-bottom: 124px;
-    min-height: 404px - 124px;
   }
 }
