--- a/source/sass/blocks/reviews.scss
+++ b/source/sass/blocks/reviews.scss
@@ -65,7 +65,7 @@
 
 @media (min-width: $desktop-width) {
   .reviews__wrapper {
-    background-image: url("../../img/index/quotes.svg");
+    background-image: url("../img/index/quotes.svg");
     background-repeat: no-repeat;
     background-position: center 72px;
     padding-top: 193px;
