--- a/source/sass/blocks/form-photo.scss
+++ b/source/sass/blocks/form-photo.scss
@@ -2,6 +2,10 @@
   padding: 20px;
 }
 
+.form-photo__image {
+  display: block;
+}
+
 .form-photo__button-wrapper {
   display: flex;
   flex-direction: column;
